fixed some sizing stuff on mobile size

--- a/main.css
+++ b/main.css
@@ -120,16 +120,21 @@ p{
     padding: 0;
   }
   h1{
-    font-size: 20px;
+    font-size: 24px;
   }
   h3{
     font-size: 12px;
   }
   nav{
     padding-right: 16px;
+    padding-top: .25rem;
+  }
+  .logo{
+    height: 32px;
   }
   .nav-button{
     font-size: 18px;
+    padding-right: 0;
   }
   .body-container{
     padding-left: 0;
@@ -138,7 +143,10 @@ p{
   .footer-container{
     padding: 0;
   }
+  .footer-container li{
+    padding: 0.5rem;
+  }
   .social-logo{
-    height: 1.4rem;
+    height: 1.5rem;
   }
 }
